[gd_scene load_steps=2 format=3 uid="uid://main_menu"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_main"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.02, 0.1, 1)

[node name="SafeAreaMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="MainVBox" type="VBoxContainer" parent="SafeAreaMargin"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TopBar" type="HBoxContainer" parent="SafeAreaMargin/MainVBox"]
layout_mode = 2
alignment = 2

[node name="CurrencyPanel" type="PanelContainer" parent="SafeAreaMargin/MainVBox/TopBar"]
layout_mode = 2

[node name="CurrencyLabel" type="Label" parent="SafeAreaMargin/MainVBox/TopBar/CurrencyPanel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0 SC"
horizontal_alignment = 2

[node name="Spacer" type="Control" parent="SafeAreaMargin/MainVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="TitleContainer" type="VBoxContainer" parent="SafeAreaMargin/MainVBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="SafeAreaMargin/MainVBox/TitleContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "CLICK OF FATE"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="SafeAreaMargin/MainVBox/TitleContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Maîtrise ton Destin"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="SafeAreaMargin/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="ButtonsContainer" type="VBoxContainer" parent="SafeAreaMargin/MainVBox"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PlayButton" type="Button" parent="SafeAreaMargin/MainVBox/ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 70)
theme_override_font_sizes/font_size = 28
text = "▶ JOUER"

[node name="OptionsButton" type="Button" parent="SafeAreaMargin/MainVBox/ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
theme_override_font_sizes/font_size = 22
text = "⚙ Options"

[node name="QuitButton" type="Button" parent="SafeAreaMargin/MainVBox/ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
theme_override_font_sizes/font_size = 22
text = "✕ Quitter"

[node name="Spacer3" type="Control" parent="SafeAreaMargin/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="VersionLabel" type="Label" parent="SafeAreaMargin/MainVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
text = "v0.1.0"
horizontal_alignment = 1
